[package]
name = "droppa"
version = "1.0.0"
edition = "2021"

[dependencies]
rouille = "3.0"
tokio = { version = "1.30", features = ["full"] }
tokio-rustls = { version = "0.23.0",  features = ["dangerous_configuration"] }
rsa = "0.9.6"
rand = "0.8.5"
rcgen = "0.11"
clap = { version = "4.2", features = ["derive"] }
pkcs8 = "0.10.2" 
pem = "3.0"
flate2 = "1.0.31"