[package]
name = "droppa"
version = "1.1.0"
edition = "2021"

[dependencies]
rouille = "3.0"
tokio = { version = "1.30", features = ["full"] }
tokio-rustls = { version = "0.23.0",  features = ["dangerous_configuration"] }
rsa = "0.9.6"
rand = "0.8.5"
rcgen = "0.11"
clap = { version = "4.2", features = ["derive"] }
pkcs8 = "0.10.2" 
rustls-pemfile = "1.0"
pem = "3.0"
flate2 = "1.0.31"
url = "2.2.2"
colored = "2.0.0"
ammonia = "4.0.0"
log = "0.4"
# simplelog = "0.11"

[profile.release]
opt-level = "z" 
strip = true
lto = true
codegen-units = 1
panic = "abort"